SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 02/04/2007, version 1.04: roms
	- cosmetic change in the name of the TiEmu virtual link
	- added KDE file dialog support (like in TiEmu)
	- fixed/improved hand-held model check
	- fixed aliasing violations in Win32 file dialog code (kevin)

- 23/02/2007, version 1.03 (1.0.4, 1.0.5, 1.0.4, 1.0.1): roms
	- enabled i18n
	- set home/working folder as current folder on MinGW build
	=> released on 14/03/2007.

- 17/01/2007, version 1.02 (1.0.3, 1.0.4, 1.0.3, 1.0.1): roms
	- added xdg-open in front of the list of browsers (kevin)
	- add trailing slash for directory (otherwise, dirname with spaces 
	like 'My Files' are not opened properly)
	- fixed sending of vars into archive thru the App node
	- Titanium/USB dumper is now launched remotely
	- bug #1662383: V200 replies as busy but screenshot is working anyways
	- clean-up/fixes in many tifile_is calls (some of them have been simplified,
		some others have been replaced by tifiles_file_test)
	- check for TI8x OS version when deleting var/app
	- check that hand-held specified in device box matches those detected at ready check
	- added a 2s pause when resetting USB communication (seems to be needed...)
	- don't allow to send a TI73 TiGroup file on a TI89 for instance 
		(check that TiGroup matches target hand-held)
	=> released on 20/02/2007.
	
- 28/09/2006, version 1.01 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
	- added CABLE_DEV support for testing purposes (visible under Linux only)
	- GIF: don't ask when built in _CONSOLE mode
	- doesn't reopen DirectLink when using UsbKernel access
	- don't reopen cable in tilp_ticalcs_isready because the Titanium with USB
	  doesn't like this under Linux.
	- removed non-working leftovers from old Cocoa port, made OS X work like Linux instead (kevin)
	- fixed locale directory (kevin)
	- fixed memory leaks in config file handling (kevin)