@@ -25,7 +25,7 @@
 	      <accelerator key="X" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image133">
+		<widget class="GtkImage" id="image161">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cut</property>
 		  <property name="icon_size">1</property>
@@ -48,7 +48,7 @@
 	      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image134">
+		<widget class="GtkImage" id="image162">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-copy</property>
 		  <property name="icon_size">1</property>
@@ -71,7 +71,7 @@
 	      <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image135">
+		<widget class="GtkImage" id="image163">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-paste</property>
 		  <property name="icon_size">1</property>
@@ -110,7 +110,7 @@
 	      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image136">
+		<widget class="GtkImage" id="image164">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-delete</property>
 		  <property name="icon_size">1</property>
@@ -120,16 +120,6 @@
 		  <property name="ypad">0</property>
 		</widget>
 	      </child>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkMenuItem" id="make_a_new_dir1">
-	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Make a new directory</property>
-	      <property name="label" translatable="yes">New _folder</property>
-	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_make_a_new_dir1_activate"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -183,7 +173,7 @@
 	      <signal name="activate" handler="rbm_move_to_parent_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image137">
+		<widget class="GtkImage" id="image165">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-goto-top</property>
 		  <property name="icon_size">1</property>
@@ -205,7 +195,7 @@
 	      <signal name="activate" handler="rbm_set_as_working_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image138">
+		<widget class="GtkImage" id="image166">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-save</property>
 		  <property name="icon_size">1</property>
@@ -219,30 +209,17 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkSeparatorMenuItem" id="separator4">
+	    <widget class="GtkSeparatorMenuItem" id="separator5">
 	      <property name="visible">True</property>
 	    </widget>
 	  </child>
 
 	  <child>
-	    <widget class="GtkImageMenuItem" id="update_window1">
+	    <widget class="GtkMenuItem" id="properties1">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Refresh file informations</property>
-	      <property name="label" translatable="yes">_Refresh</property>
+	      <property name="label" translatable="yes">_Properties</property>
 	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_update_window1_activate"/>
-
-	      <child internal-child="image">
-		<widget class="GtkImage" id="image139">
-		  <property name="visible">True</property>
-		  <property name="stock">gtk-refresh</property>
-		  <property name="icon_size">1</property>
-		  <property name="xalign">0.5</property>
-		  <property name="yalign">0.5</property>
-		  <property name="xpad">0</property>
-		  <property name="ypad">0</property>
-		</widget>
-	      </child>
+	      <signal name="activate" handler="rbm_properties1_activate" last_modification_time="Mon, 16 Apr 2007 14:05:21 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
