@@ -15,8 +15,6 @@ gchar *s = N_("Rename file(s)");
 gchar *s = N_("_Rename");
 gchar *s = N_("Delete selected file(s)");
 gchar *s = N_("_Delete");
-gchar *s = N_("Make a new directory");
-gchar *s = N_("New _folder");
 gchar *s = N_("_File");
 gchar *s = N_("Select all files");
 gchar *s = N_("_Select all");
@@ -26,8 +24,7 @@ gchar *s = N_("Goes up into the parent folder");
 gchar *s = N_("_Go to parent dir");
 gchar *s = N_("Set the current directory as working directory whenever TiLP starts.");
 gchar *s = N_("Set as working _folder");
-gchar *s = N_("Refresh file informations");
-gchar *s = N_("_Refresh");
+gchar *s = N_("_Properties");
 gchar *s = N_("_Groups");
 gchar *s = N_("Ungroup selected file(s)");
 gchar *s = N_("_Ungroup");
