@@ -18,6 +18,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <property name="has_separator">True</property>
 
   <child internal-child="vbox">
@@ -79,7 +80,7 @@
 	      <property name="left_margin">0</property>
 	      <property name="right_margin">0</property>
 	      <property name="indent">0</property>
-	      <property name="text" translatable="yes">Cannot find the manpage file.</property>
+	      <property name="text" translatable="yes"></property>
 	    </widget>
 	  </child>
 	</widget>
