@@ -1,4 +1,7 @@
-
+/*
+ * Translatable strings file generated by Glade.
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
+ */
 
 gchar *s = N_("Page of Manual");
-gchar *s = N_("Cannot find the manpage file.");
